--- a/Brink Theme/Brink.css
+++ b/Brink Theme/Brink.css
@@ -1,5 +1,5 @@
 /* "Brink" by Valerio Lyndon
- * Version 1.8.0
+ * Version 1.8.1
  * 
  * = TABLE OF CONTENTS =
  * 
@@ -66,10 +66,6 @@
   !IMPORTS
 \*------------------------------*/
 
-/*Cover images*/
-@\import "https://malscraper.azurewebsites.net/covers/auto/presets/dataimagelink";
-
-/*Fonts*/
 @\import "https://fonts.googleapis.com/css?family=Sarabun:400,700";
 @\import "https://valeriolyndon.github.io/MAL-Public-List-Designs/resources/font-awesome-4.7.0/css/font-awesome-force-legacy.min.css";
 
@@ -2208,7 +2204,7 @@ body #fancybox-close {
 /* Header bars */
 
 #advanced-options::before,
-.modal-content::before {
+.mal-modal-content::before {
 	content: "";
 	position: absolute;
 	top: -2px;
@@ -2224,16 +2220,18 @@ body #fancybox-close {
   @GDPR
 \*~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */
 
-#gdpr-modal-bottom {
-	filter: invert(0.9) hue-rotate(180deg);
-}
-
 #gdpr-modal-bottom .modal-wrapper {
+	filter: invert(0.9) hue-rotate(180deg);
 	width: 100%;
+	margin: 0;
 }
 
 #gdpr-modal-bottom .text {
 	width: 100%;
+}
+
+#gdpr-modal-bottom a {
+	color: #1d439b;
 }
 
 
@@ -2241,24 +2239,24 @@ body #fancybox-close {
   @Streaming
 \*~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */
 
-.modal,
-.modal-backdrop {
+.mal-modal,
+.mal-modal-backdrop {
 	transition-duration: var(--timeMenu) !important;
 	transition-timing-function: var(--bezierSmooth) !important;
 }
-.modal-backdrop.show {
+.mal-modal-backdrop.show {
 	opacity: 0.78 !important;
 }
 
-.modal-content {
+.mal-modal-content {
 	background: hsl(var(--bg)) !important;
 	border: none !important;
 	border-radius: 0 !important;
 	box-shadow: -1.6px 2.24px 4.48px hsla(0, 0%, 0%, 70%);
 }
 
-.modal-header,
-.modal-body .broadcasts {
+.mal-modal-header,
+.mal-modal-body .broadcasts {
 	border-color: hsla(var(--text), 12%) !important;
 }
 
