Clarified v1.3.2 Fix Priority Display
Fixed priority column displaying on non-planned list items.

--- a/Clarified Theme/Clarified.css
+++ b/Clarified Theme/Clarified.css
@@ -1,6 +1,6 @@
 /**
  * "Clarified" by Valerio Lyndon
- * v1.3.1
+ * v1.3.2
  * 
 ***TABLE*OF*CONTENTS***
  * 
@@ -1164,7 +1164,7 @@ tr.list-table-data {
 
 /* Hide priority column on non-planned items */
 .data.status:not([class*="planto"]) ~ .priority {
-	display: none;
+	display: none !important;
 }
 
 
