Hide recaptcha terms
They were breaking the layout a wee bit and I can't be bothered to style them.

--- a/Puni Theme/Puni.css
+++ b/Puni Theme/Puni.css
@@ -1348,6 +1348,10 @@ div[style="padding-top: 8px"] {
 	content: 'List design by Valerio Lyndon.';
 }
 
+#recaptcha-terms {
+	display: none;
+}
+
 /*~~~~~~~~~~~~~~~~~~~~~~~~~*\
   !OVERLAYS
 \*~~~~~~~~~~~~~~~~~~~~~~~~~*/
